fix: horizontal scrolling on info page, debugger statement in service worker causing appearance of a lockup

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ nav h1 a {
 }
 #restaurant-favorite button {
 	position: absolute;
-	left: 9999px;
+	left: -9999px;
 }
 #restaurant-favorite .heart {
 	fill: #eeeeee;
